add config file to enable and disable parts

--- a/data/locale/en-US.ini
+++ b/data/locale/en-US.ini
@@ -1,4 +1,11 @@
 DeviceSwitcher="Device Switcher"
+Description="Device Switcher"
+VirtualCamera="Virtual Camera"
 AudioMonitor="Audio Monitor"
+Default="Default"
+PropertiesButton="PropertiesButton"
+FiltersButton="FiltersButton"
+RestartButton="RestartButton"
 Monitor="Monitor"
 Retain="Retain"
+VolumeSlider="Volume Slider"
